force-app/main/default/objects/Care_Log__c/Care_Log__c.object-meta.xml
<CustomObject>
    <label>Care Log</label>
    <nameField>
        <displayFormat>CL-{0000}</displayFormat>
        <label>Care Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Care Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>