force-app/main/default/objects/Care_Log__c/fields/Action_Taken__c.field-meta.xml
<CustomField>
    <fullName>Action_Taken__c</fullName>
    <label>Action Taken</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Watered</fullName>
            </value>
            <value>
                <fullName>Fertilized</fullName>
            </value>
            <value>
                <fullName>Repotted</fullName>
            </value>
            <value>
                <fullName>Pruned</fullName>
            </value>
            <value>
                <fullName>Pest Control</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>