force-app/main/default/objects/Care_Log__c/fields/Log_Date__c.field-meta.xml
<CustomField>
    <fullName>Log_Date__c</fullName>
    <description>The date and time the action was performed.</description>
    <label>Log Date</label>
    <type>DateTime</type>
</CustomField>