force-app/main/default/objects/Care_Log__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Any specific notes about the care action (e.g., &quot;Used half-strength fertilizer&quot;).</description>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>