force-app/main/default/objects/Care_Log__c/validationRules/Log_Date_Cannot_Be_In_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Log_Date_Cannot_Be_In_Future</fullName>
    <active>true</active>
    <errorConditionFormula>Log_Date__c &gt; NOW()</errorConditionFormula>
    <errorDisplayField>Log_Date__c</errorDisplayField>
    <errorMessage>The log date and time cannot be in the future.</errorMessage>
</ValidationRule>