force-app/main/default/objects/Care_Log__c/listViews/New_View.listView-meta.xml
<ListView>
    <fullName>New_View</fullName>
    <columns>NAME</columns>
    <columns>Log_Date__c</columns>
    <columns>Plant__c</columns>
    <columns>Action_Taken__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Mine</filterScope>
    <label>New View</label>
</ListView>